# jvm

./: Cargo.toml  Test.java  Test2.java  abi.txt
classes/: Object.java
src/: bytecode.rs  class_loader.rs  interpreter.rs  list.rs  main.rs  value.rs
src/class_parser/: attribute.rs  iterator.rs  mod.rs
src/interpreter/: locals.rs  mod.rs  stack.rs
src/jit/: assembly.rs  disassemble.rs  mod.rs
src/model/: class.rs  class_file.rs  class_library.rs  constant_pool.rs  field.rs  fields.rs  heap.rs  method.rs  mod.rs  stack.rs  types.rs  value.rs  visibility.rs
