[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dynasmrt = "1.1"
cafebabe = "0.4.2"
bitflags = "1.3"
unicode-segmentation = "1.8"
appendlist = "1.4"